Fixed sections-text issues on mobile-view

--- a/src/app/components/master/master.component.css
+++ b/src/app/components/master/master.component.css
@@ -1022,6 +1022,11 @@ section {
     .register a {
         font-size: 15px;
     }
+
+    .section-text {
+        text-align: center;
+        line-height: 1.5
+    }
 }
 
 @media screen and (max-width: 991px) {
